fix(platform-mobile): prevent text overflow in commonMenu
White space restrictions in the mobile stylesheet caused text overflow in the commonMenu. This commit resolves the issue by setting the white-space property to 'unset' for the .b3-menu__label class within elements that have an id starting with 'afwd'.

--- a/style/platforms/mobile.scss
+++ b/style/platforms/mobile.scss
@@ -39,6 +39,12 @@
         border-radius: 0;
     }
 
+    #commonMenu {
+        [id^=afwd] .b3-menu__label {
+            white-space: unset;
+        }
+    }
+
     .b3-menu__separator {
         height: 1px;
         margin: 16px;
